--- a/Personal Site/Pages/Status.cshtml
+++ b/Personal Site/Pages/Status.cshtml
@@ -4,5 +4,23 @@
     ViewData["Title"] = $"Sean T. McBeth - {Model.Code}";
 }
 
+@section Menu {
+    @{
+        foreach (var (text, title, href) in new[] {
+            ("home/", "Home", "/"),
+            ("etc/", "Extras", "/other")
+        })
+        {
+            <li>
+                <a href="@href"
+                   aria-label="@title"
+                   title="@title">
+                    @text
+                </a>
+            </li>
+        }
+    }
+}
+
 <img src="https://http.cat/@Model.Code" style="display:block;margin:0 auto" />
 <a href="~/">Return home</a>
