--- a/Personal Site/Pages/Talks.cshtml
+++ b/Personal Site/Pages/Talks.cshtml
@@ -6,6 +6,24 @@
     ViewData["Description"] = "Sean T. McBeth is a software engineer and dad.";
 }
 
+@section Menu {
+    @{
+        foreach (var (text, title, href) in new[] {
+            ("home/", "Home", "/"),
+            ("etc/", "Extras", "/other")
+        })
+        {
+            <li>
+                <a href="@href"
+                   aria-label="@title"
+                   title="@title">
+                    @text
+                </a>
+            </li>
+        }
+    }
+}
+
 <section id="talks"
          aria-label="talks and interviews">
 
