--- a/Personal Site/Pages/Other.cshtml
+++ b/Personal Site/Pages/Other.cshtml
@@ -41,6 +41,7 @@
         ("SeanMcBeth", "CodePen", "https://codepen.io/SeanMcBeth/"),
         ("seanmcbeth", "NPM", "https://www.npmjs.com/~seanmcbeth"),
         ("Sean T. McBeth", "LinkedIn", "https://www.linkedin.com/pub/sean-mcbeth/6/727/378"),
+        ("Sean T. McBeth", "SoundCloud", "https://soundcloud.com/sean-t-mcbeth"),
         ("moron4hire", "Hacker News", "https://news.ycombinator.com/user?id=moron4hire"),
         ("Sean_McBeth", "Twitter", "https://twitter.com/Sean_McBeth"),
         ("Sean T. McBeth", "IMDB", "https://www.imdb.com/name/nm5111059/")
