remove the logging, not going to need it

--- a/Marxent Labs Test/index.css
+++ b/Marxent Labs Test/index.css
@@ -30,7 +30,7 @@ body {
     "Lucida Grande",
     sans-serif;
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: auto 1fr;
   background-color: var(--main-bg-color);
   color: var(--main-fg-color);
 }
