--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -101,9 +101,11 @@
             subject matter experts to be able to rapidly create new immersion scenarios."),
         ("Juniper", "Juniper", "A forest demo built with Juniper", "/juniper", "/img/juniper.jpeg",
             @"Juniper is an .NET 7 and TypeScript framework for building WebXR applications. It is an evolution of my previous project, Primrose."),
-        ("AI Chat Bot", "AI Chat Bot", "An speech-based conversation with AI", "/apps/ai-chat-bot", "img/ai-chat-bot.jpeg",
+        ("AI Chat Bot", "AI Chat Bot", "A speech-based conversation with AI", "/apps/ai-chat-bot", "/img/ai-chat-bot.jpeg",
             @"The AI Chat Bot uses Speech-to-Text technology and some clever prompting of an OpenAI LLM to generate characterized responses,
             which are then piped out to a Text-to-Speech engine, with lip-sync."),
+        ("Woodturning", "Woodturning", "Wood working on a lathe", "/turning", "/img/turning.jpg", 
+            @"Some pictures of wooden cups and bowls I've made with my woodturning lathe."),
         ("Primrose", "Primrose", "Primrose text editor", "/primrose", "/img/primrose.jpeg",
             @"Primrose was the world's first JavaScript framework for developing WebXR applications, back when WebXR was still called ""WebVR"".
             My first release of Primrose was sometime in 2014, almost a full year before Mozilla's A-Frame.")
