--- a/Personal Site/Pages/Turning.cshtml
+++ b/Personal Site/Pages/Turning.cshtml
@@ -62,7 +62,7 @@
     <figure>
         <h3>My first bowl</h3>
         <img src="/turning/C1.jpg" alt="Photo of wood working project" title="My first bowl">
-        <figcaption>A snack bowl. This pine, stained with a red ink. Not pictured here is the attempt I made at sealing the wood with epoxy resin, which ended up ruining the piece because I didn't use enough epoxy.'</figcaption>
+        <figcaption>A snack bowl. This is pine, stained with a red ink. Not pictured here is the attempt I made at sealing the wood with epoxy resin, which ended poorly as I didn't use enough epoxy.</figcaption>
         <a href="#"></a>
     </figure>
 
