--- a/TypeScript Code/src/apps/ai-chat-bot/index.css
+++ b/TypeScript Code/src/apps/ai-chat-bot/index.css
@@ -14,6 +14,23 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+        column-gap: 5px;
+    }
+
+.controls > .btn {
+    border-radius: 5px;
+    margin: -1px 1px 1px -1px;
+    box-shadow: var(--box-shadow-color) 2px 2px 4px;
+}
+
+    .controls > .btn:hover:not([disabled]) {
+        margin: -2px 2px 2px -2px;
+        box-shadow: var(--box-shadow-color) 4px 4px 8px;
+    }
+
+    .controls > .btn:active:not([disabled]) {
+        margin: 0;
+        box-shadow: var(--box-shadow-color) 0 0 2px;
     }
 
 #status {
@@ -41,6 +58,39 @@
     flex-direction: column;
 }
 
+#examples {
+    padding: 1em;
+}
+
+    #examples > div {
+        margin-bottom: 1em;
+        border-bottom: solid 1px var(--main-fg-color);
+    }
+
+        #examples > div > * {
+            color: rgb(204, 204, 204);
+        }
+
+        #examples > div > iframe {
+            width: 100%;
+            height: 166px;
+        }
+
+        #examples > div > div {
+            font-size: 10px;
+            line-break: anywhere;
+            word-break: normal;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            font-family: Interstate, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Garuda, Verdana, Tahoma, sans-serif;
+            font-weight: 100;
+        }
+
+            #examples > div > div > a {
+                text-decoration: none;
+            }
+
 em {
     font-style: normal;
     font-weight: bold;
@@ -49,6 +99,7 @@ em {
     em::before {
         content: open-quote;
     }
+
     em::after {
         content: close-quote;
     }
